# Casino

./: LICENSE  README.md  noxfile.py  pyproject.toml  ruff.toml  sqlc.yaml  sqlite.db  test.py
.github/workflows/: ci.yaml
backend/: __init__.py  authentication.py  blackjack.py  cards.py  chickengame.py  dependencys.py  main.py  mines.py  serialization.py  slots.py  users.py
backend/db/: __init__.py  models.py  queries.py
backend/internal/: __init__.py  errors.py  hooks.py  serialization.py  snowflakes.py  websocket.py
backend/internal/ws/: __init__.py  decorator.py  game_lobby.py  opcodes.py  websocket_client.py  websocket_endpoints.py  websocket_manager.py
backend/models/: __init__.py  events.py  responses.py
backend/models/internal/: ws.py
backend/utils/: __init__.py  structs.py  tokens.py
db/: queries.sql  schema.sql
frontend/: __main__.py  constants.py  logging.json  main.py  old_main.py  ui.py  window.py
frontend/internal/: __init__.py  backend_client.py  decorator.py  net_client.py  rest_client.py  routes.py  websocket_thread.py  websocket_view.py
frontend/net/: __init__.py  error.py  rest_client.py  routes.py
frontend/shaders/: blur.glsl
frontend/views/: __init__.py  base.py  black_jack.py  blackjack_view.py  chickengame_view.py  game_selection.py  game_view.py  lobbys_view.py  login_view.py  main_menu.py  mines_view.py  pause_menu.py  slots_view.py  title.py
shared/internal/: __init__.py  hooks.py  opcodes.py  snowflakes.py
shared/models/: __init__.py  events.py  requests.py  responses.py
shared/models/internal/: __init__.py  ws.py
