[project]
name = "casino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.uv]
default-groups = ["backend", "frontend", "dev"]


[dependency-groups]
backend = [
    "sanic[ext]>=25.3.0",
    "msgspec>=0.19.0",
    "aiosqlite>=0.21.0",
    "pyjwt>=2.10.1",
]
dev = [
    "nox>=2025.2.9",
    "pyright>=1.1.400",
    { include-group="ruff"}
]
ruff =["ruff>=0.11.7"]
frontend = [
    "arcade>=3.2.0",
    "colorlog>=6.9.0",
    "httpx>=0.28.1",
    "websocket-client>=1.8.0",
]

[tool.pyright]
include = ["frontend", "backend"]
pythonVersion = "3.13"

reportImplicitOverride = "error"
